--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
     "dotenv": "^17.2.2",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.18.1"
+    "mongoose": "^8.18.1",
+    "nodemailer": "^7.0.6"
   }
 }
